worked on the swagger
