# routes/index.js
@@ -4,4 +4,6 @@ router.get('/', (req, res) => { res.send('Hello World!')});
 
 router.use('/users', require('./users'));
 
+router.use('/contacts', require('./contacts')); 
+
 module.exports = router;
